--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "rm -rf ./dist/ && npx tsc --rootDir src --outDir dist && node ./dist/index.js",
+    "start:dev": "npx ts-node-dev --respawn --transpile-only ./src/index.ts",
     "dev": "npx ts-node-dev --respawn --transpile-only ./src/index.ts",
     "dev-nodemon": "npx nodemon ./src/index.ts",
     "build": "rm -rf ./dist/ && npx tsc --rootDir src --outDir dist",
